Use POD instead of texinfo

--- a/tapper.tex
+++ b/tapper.tex
@@ -112,7 +112,16 @@
 %%%%##########################################################################
 
 \newpage
-\input{article_example.tex}
+\input{chapter-synopsis.tex}
+\input{chapter-infrastructure.tex}
+\input{chapter-tap.tex}
+\input{chapter-testsuites.tex}
+\input{chapter-preconditions.tex}
+\input{chapter-commandline.tex}
+\input{chapter-webgui.tex}
+\input{chapter-reports-api.tex}
+\input{chapter-usecases.tex}
+
 
 %%%%##########################################################################
 
