[FIX] deprecated footer style

--- a/tapper.tex
+++ b/tapper.tex
@@ -4,7 +4,7 @@
 
 %%%%##########################################################################
 
-\documentclass[11pt,a4paper,twoside,DIV15,headinclude,footexclude,headsepline]{scrartcl}
+\documentclass[11pt,a4paper,twoside,DIV15,headinclude,footinclude=false,headsepline]{scrartcl}
 \usepackage{tapper}
 \listfiles
 
